--- a/XIBCell/XIBCell/XIBCell.xib
+++ b/XIBCell/XIBCell/XIBCell.xib
@@ -1,55 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="XIBCell" rowHeight="340" id="VVs-vC-mYc" customClass="XIBCell" customModule="XIBCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="340"/>
+            <rect key="frame" x="0.0" y="0.0" width="450" height="340"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VVs-vC-mYc" id="qh6-Pa-CGB">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="339.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="450" height="340"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cdz-wM-QQz" userLabel="TitleLabel">
-                        <rect key="frame" x="16" y="11" width="343" height="21"/>
+                        <rect key="frame" x="15" y="11" width="420" height="21"/>
                         <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOr-f0-6yq" userLabel="FirstLabel">
-                        <rect key="frame" x="16" y="176" width="343" height="21"/>
+                        <rect key="frame" x="15" y="176" width="420" height="21"/>
                         <color key="backgroundColor" red="0.83216959239999999" green="0.98548370600000001" blue="0.47333085539999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second Label A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E82-aX-gij" userLabel="SecondLabelA">
-                        <rect key="frame" x="16" y="205" width="120" height="21"/>
+                        <rect key="frame" x="15" y="205" width="120" height="21"/>
                         <color key="backgroundColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Third Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7q-hV-Bqm" userLabel="ThirdLabel">
-                        <rect key="frame" x="16" y="234" width="343" height="21"/>
+                        <rect key="frame" x="15" y="234" width="420" height="21"/>
                         <color key="backgroundColor" red="1" green="0.80359639709204078" blue="0.65306568834707612" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VKj-bd-3PO">
-                        <rect key="frame" x="67" y="40" width="240" height="128"/>
+                        <rect key="frame" x="105" y="40" width="240" height="128"/>
                         <color key="backgroundColor" red="0.45085787770000002" green="0.98829740290000001" blue="0.83763033149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="240" id="2Gz-vL-5kB"/>
@@ -57,7 +53,7 @@
                         </constraints>
                     </imageView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dk8-oB-BsE" userLabel="TextView">
-                        <rect key="frame" x="16" y="263" width="343" height="68.5"/>
+                        <rect key="frame" x="15" y="263" width="420" height="69"/>
                         <color key="backgroundColor" red="1" green="0.7273118519365952" blue="0.87524322050819714" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -67,7 +63,7 @@
                         </connections>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second Label B" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JkV-H6-Nkm" userLabel="SecondLabelB">
-                        <rect key="frame" x="239" y="205" width="119.5" height="21"/>
+                        <rect key="frame" x="315.5" y="205" width="119.5" height="21"/>
                         <color key="backgroundColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -84,12 +80,12 @@
                     <constraint firstItem="dk8-oB-BsE" firstAttribute="top" secondItem="N7q-hV-Bqm" secondAttribute="bottom" constant="8" id="TI7-UE-OCS"/>
                     <constraint firstAttribute="trailingMargin" secondItem="dk8-oB-BsE" secondAttribute="trailing" id="VNg-Cm-hMo"/>
                     <constraint firstItem="E82-aX-gij" firstAttribute="leading" secondItem="qh6-Pa-CGB" secondAttribute="leadingMargin" id="WyN-h6-N2b"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="JkV-H6-Nkm" secondAttribute="trailing" id="Yeo-T1-AAI"/>
                     <constraint firstAttribute="bottom" secondItem="dk8-oB-BsE" secondAttribute="bottom" constant="8" id="axW-jy-WUf"/>
                     <constraint firstItem="EOr-f0-6yq" firstAttribute="leading" secondItem="qh6-Pa-CGB" secondAttribute="leadingMargin" id="eKD-rN-0lH"/>
                     <constraint firstItem="Cdz-wM-QQz" firstAttribute="leading" secondItem="qh6-Pa-CGB" secondAttribute="leadingMargin" id="eKh-Vw-jfm"/>
                     <constraint firstItem="dk8-oB-BsE" firstAttribute="leading" secondItem="qh6-Pa-CGB" secondAttribute="leadingMargin" id="fsy-Ar-EWo"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Cdz-wM-QQz" secondAttribute="trailing" id="iI4-hI-fV1"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="JkV-H6-Nkm" secondAttribute="trailing" id="r9X-4P-kOE"/>
                     <constraint firstItem="VKj-bd-3PO" firstAttribute="top" secondItem="Cdz-wM-QQz" secondAttribute="bottom" constant="8" id="rpV-FQ-9Yd"/>
                     <constraint firstAttribute="trailingMargin" secondItem="N7q-hV-Bqm" secondAttribute="trailing" id="rpu-O6-gAr"/>
                     <constraint firstItem="N7q-hV-Bqm" firstAttribute="top" secondItem="JkV-H6-Nkm" secondAttribute="bottom" constant="8" id="tBw-hz-l59"/>
@@ -99,7 +95,7 @@
             <connections>
                 <outlet property="theTextView" destination="dk8-oB-BsE" id="vH6-Gh-fgq"/>
             </connections>
-            <point key="canvasLocation" x="103.5" y="172"/>
+            <point key="canvasLocation" x="163.19999999999999" y="171.81409295352324"/>
         </tableViewCell>
     </objects>
 </document>
